# local-llm-macbook

./: .gitignore  AGENTS.md  README-models.md  README.md  install_kilo.sh  kilo.json
censored/deepseek-v4-flash-2bit-dq-mlx/: .deepseek_config  1_setup_download.sh  2_start_mlx.sh  README.md  apply_local_patches.sh  harness.py  kilo.json  openai_server.py  test_harness.py
censored/deepseek-v4-flash-ds4/: 1_setup_download.sh  2_start_ds4.sh  AGENTS.md  README.md  download_gguf.py  ds4_kilo_proxy.py  kilo.json  validate_model.py
censored/diffusiongemma4-26b-a4b-mlx/: .gitignore  1_setup_download.sh  2_run_mlx.sh  README-diffusiongemma4.md  apply_local_patches.sh  kilo.json  requirements.txt  validate_model.py
censored/gemma4-server-atomicchat-mlx-31b-2026-07-15/: .gitignore  1_setup_download.sh  (+10 more)
uncensored/qwen3.5-122b-a10b-dflash-mlx/dflash-mlx/: .gitignore  ADDING_MODELS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
uncensored/qwen3.5-122b-a10b-dflash-mlx/dflash-mlx/benchmarks/: metrics_history.csv  qwen3-results.md  qwen35-results.md
uncensored/qwen3.5-122b-a10b-dflash-mlx/dflash-mlx/dflash_mlx/: __init__.py  adapters.py  api.py  benchmark_cli.py  chat_cli.py  cli.py  custom_qwen35_model.py  draft.py  history.py  inspect_cli.py  model_prep.py  openai_server.py  runtime.py
uncensored/qwen3.5-122b-a10b-dflash-mlx/dflash-mlx/examples/: python_api.py
uncensored/qwen3.5-122b-a10b-dflash-mlx/dflash-mlx/scripts/: generate_benchmark_chart.py
uncensored/qwen3.5-122b-a10b-dflash-mlx/dflash-mlx/tests/: test_openai_server.py  test_smoke.py  test_streaming.py
(+106 files in other folders)
